--- a/Golfe/index.html
+++ b/Golfe/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Basquete</title>
+  <title>Golfe</title>
 </head>
 <body>
   <img src="../imgs/logo.png" alt="Logo" width="100">
@@ -14,15 +14,15 @@
     <li><a href="../golfe/index.html">Golfe</a></li>
   </ul>
 
-  <h2>Sobre o Basquete</h2>
-  <p>O basquete foi criado em 1891. Grandes jogadores como Michael Jordan fizeram história.</p>
-  <a href="https://pt.wikipedia.org/wiki/Basquetebol" target="_blank">Saiba mais</a>
+  <h2>Sobre o Golfe</h2>
+  <p>Esporte tradicional jogado em campos abertos. Famoso em países como EUA e Escócia.</p>
+  <a href="https://pt.wikipedia.org/wiki/Golfe" target="_blank">Saiba mais</a>
 
   <h3>Produtos</h3>
   <ul>
-    <li>Bola de basquete - R$ 99 - Tamanho: M</li>
-    <li>Tênis de basquete - R$ 199 - Tamanhos: 38 ao 44</li>
-    <li>Camiseta - R$ 59 - Tamanhos: P, M, G</li>
+    <li>Taco de golfe - R$ 250</li>
+    <li>Kit bolas - R$ 60</li>
+    <li>Luvas - R$ 40</li>
   </ul>
 </body>
 </html>
