--- a/index.html
+++ b/index.html
@@ -1,7 +1,41 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html>
 <head>
-    <meta charset+"UTF-8" />
-    <title>Otávio Esportes</title>
+  <title>OTÁVIO ESPORTES</title>
 </head>
 <body>
+  <img src="imgs/logo.png" alt="Logo da loja" width="100">
+  <h1>Loja Esportiva Campeã</h1>
+
+  <ul>
+    <li><a href="index.html">Início</a></li>
+    <li><a href="basquete/index.html">Basquete</a></li>
+    <li><a href="futebol/index.html">Futebol</a></li>
+    <li><a href="golfe/index.html">Golfe</a></li>
+  </ul>
+
+  <h2>Produtos em Destaque</h2>
+  <a href="basquete/index.html"><img src="imgs/destaque-basquete.jpg" alt="Basquete" width="200"></a>
+  <a href="futebol/index.html"><img src="imgs/destaque-futebol.jpg" alt="Futebol" width="200"></a>
+  <a href="golfe/index.html"><img src="imgs/destaque-golfe.jpg" alt="Golfe" width="200"></a>
+
+  <h2>Sobre a Loja</h2>
+  <img src="imgs/loja.jpg" alt="Foto da loja" width="300">
+  <p>Vendemos produtos para todos os tipos de esportes com os melhores preços!</p>
+
+  <h3>Formas de Pagamento</h3>
+  <ul>
+    <li>Cartão de crédito</li>
+    <li>Pix</li>
+    <li>Dinheiro</li>
+  </ul>
+
+  <h3>Proprietários</h3>
+  <ul>
+    <li>Otávio Silva de Oliveira</li>
+  </ul>
+
+  <h3>Endereço</h3>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18..." width="300" height="200" style="border:0;" allowfullscreen=""></iframe>
+</body>
+</html>
