--- a/esporte/Golfe/index.html
+++ b/esporte/Golfe/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html>
 <head>
-    <title>OTÁVIO ESPORTES</title>
-    <style>
+  <title>Golfe</title>
+  <style>
         body {
             font-family: 'Arial', sans-serif;
             margin: 0;
@@ -73,63 +73,25 @@
     </style>
 </head>
 <body>
-    <header>
-        <img src="/imgs/image.png" alt="Logo da loja" width="100">
-        <h1>Loja Esportiva Campeã</h1>
-    </header>
+  <img src="../../imgs/image.png" alt="Logo" width="100">
+  <h1>Loja Esportiva Campeã</h1>
 
-    <nav>
-        <ul>
-            <li><a href="index.html">Início</a></li>
-            <li><a href="esporte/basquete/index.html">Basquete</a></li>
-            <li><a href="esporte/Futebol/index.html">Futebol</a></li>
-            <li><a href="esporte/Golfe/index.html">Golfe</a></li>
-        </ul>
-    </nav>
+  <ul>
+    <li><a href="../../index.html">Início</a></li>
+    <li><a href="../basquete/index.html">Basquete</a></li>
+    <li><a href="../Futebol/index.html">Futebol</a></li>
+    <li><a href="../Golfe/index.html">Golfe</a></li>
+  </ul>
 
-    <h2>Produtos em Destaque</h2>
-    <div class="produtos">
-        <div class="produto">
-            <a href="/esporte/basquete/index.html">
-                <img src="imgs/tenisbas.webp" alt="Basquete">
-                <h2>Tenis de Basquete</h2>
-            </a>
-        </div>
-        <div class="produto">
-            <a href="/esporte/Futebol/index.html">
-                <img src="imgs/chuteira.webp" alt="Futebol">
-                <h2>Chuteira de Futebol</h2>
-            </a>
-        </div>
-        <div class="produto">
-            <a href="/esporte/Golfe/index.html">
-                <img src="imgs/tacogolfe.webp" alt="Golfe">
-                <h2>Taco de Golfe</h2>
-            </a>
-        </div>
-    </div>
+  <h2>Sobre o Golfe</h2>
+  <p>Esporte tradicional jogado em campos abertos. Famoso em países como EUA e Escócia.</p>
+  <a href="https://pt.wikipedia.org/wiki/Golfe" target="_blank">Saiba mais</a>
 
-    <h2>Sobre a Loja</h2>
-    <img src="imgs/image.png" alt="Foto da loja" width="300">
-    <p>Vendemos produtos para todos os tipos de esportes com os melhores preços!</p>
-
-    <h3>Formas de Pagamento</h3>
-    <ul>
-        <li>Cartão de crédito</li>
-        <li>Pix</li>
-        <li>Dinheiro</li>
-    </ul>
-
-    <h3>Proprietários</h3>
-    <ul>
-        <li>Otávio Silva de Oliveira</li>
-    </ul>
-
-    <h3>Endereço</h3>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15329.071973462474!2d-42.303487999999994!3d-16.1551244!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1749513188746!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-    <footer>
-        <p>&copy; 2025 Otávio Esportes. Todos os direitos reservados.</p>
-    </footer>
+  <h3>Produtos</h3>
+  <ul>
+    <li>Taco de golfe - R$ 250</li>
+    <li>Kit bolas - R$ 60</li>
+    <li>Luvas - R$ 40</li>
+  </ul>
 </body>
 </html>
