--- a/esporte/basquete/index.html
+++ b/esporte/basquete/index.html
@@ -7,7 +7,7 @@
         font-family: 'Arial', sans-serif;
         margin: 0;
         padding: 20px;
-        background-color: #000000; /* Fundo preto */
+        background-color: #000000; 
         color: #f4f4f4;
     }
     header {
@@ -20,51 +20,51 @@
     }
     nav {
         display: flex;
-        flex-direction: column; /* Coluna para os itens do menu */
-        align-items: center; /* Centraliza os itens */
+        flex-direction: column; 
+        align-items: center; 
         margin-bottom: 20px;
     }
     ul {
-        list-style: none; /* Remove os marcadores da lista */
+        list-style: none; 
         padding: 0;
         margin: 0;
     }
     li {
-        margin: 10px 0; /* Espaçamento entre os itens */
+        margin: 10px 0; 
     }
     a {
-        display: inline-block; /* Permite definir largura e altura */
-        width: 200px; /* Largura fixa para os botões */
-        text-align: center; /* Centraliza o texto */
-        text-decoration: none; /* Remove o sublinhado do link */
-        padding: 10px; /* Espaçamento interno do botão */
-        background-color: #555; /* Cor de fundo do botão */
-        color: #fff; /* Cor do texto */
-        border-radius: 5px; /* Bordas arredondadas */
-        transition: background-color 0.3s; /* Transição suave de cor */
-        font-weight: bold; /* Texto em negrito */
+        display: inline-block; 
+        width: 200px; 
+        text-align: center; 
+        text-decoration: none; 
+        padding: 10px; 
+        background-color: #555; 
+        color: #fff; 
+        border-radius: 5px; 
+        transition: background-color 0.3s; 
+        font-weight: bold; 
     }
     a:hover {
-        background-color: #777; /* Cor mais clara ao passar o mouse */
+        background-color: #777; 
     }
     .produtos {
         display: flex;
-        justify-content: space-around; /* Espaçamento entre os produtos */
-        flex-wrap: wrap; /* Permite que os produtos se movam para a próxima linha se necessário */
+        justify-content: space-around; 
+        flex-wrap: wrap; 
         margin-bottom: 20px;
     }
     .produto {
-        text-align: center; /* Centraliza o texto dos produtos */
-        margin: 10px; /* Espaçamento entre os produtos */
-        border: 2px solid white; /* Borda branca */
-        border-radius: 10px; /* Bordas arredondadas */
-        padding: 10px; /* Espaçamento interno */
-        background-color: rgba(255, 255, 255, 0.1); /* Fundo sutil para destacar */
-        width: 200px; /* Largura fixa para as divs dos produtos */
+        text-align: center; 
+        margin: 10px; 
+        border: 2px solid white; 
+        border-radius: 10px; 
+        padding: 10px; 
+        background-color: rgba(255, 255, 255, 0.1); 
+        width: 200px; 
     }
     .produtos img {
-        width: 100%; /* Largura fixa para as imagens dos produtos */
-        border-radius: 5px; /* Bordas arredondadas nas imagens */
+        width: 100%; 
+        border-radius: 5px; 
     }
     footer {
         text-align: center;
