--- a/esporte/basquete/index.html
+++ b/esporte/basquete/index.html
@@ -76,6 +76,8 @@
   <img src="../../imgs/image.png" alt="Logo" width="100">
   <h1>Loja Esportiva Campeã</h1>
 
+   <img src="../../imgs/jordan.png" alt="image" width="300">
+
   <ul>
     <li><a href="../../index.html">Início</a></li>
     <li><a href="../basquete/index.html">Basquete</a></li>
@@ -89,7 +91,7 @@
 
   <h3>Produtos</h3>
   <ul>
-    <li>Bola de basquete - R$ 99 - Tamanho: M</li>
+    <li>Bola de basquete - R$ 99 - Tamanho: Masculino e feminino</li>
     <li>Tênis de basquete - R$ 199 - Tamanhos: 38 ao 44</li>
     <li>Camiseta - R$ 59 - Tamanhos: P, M, G</li>
   </ul>
