--- a/esporte/basquete/index.html
+++ b/esporte/basquete/index.html
@@ -84,16 +84,22 @@
   </ul>
 
    <img src="../../imgs/jordan.png" alt="image" width="300">
-   
+
   <h2>Sobre o Basquete</h2>
   <p>O basquete foi criado em 1891. Grandes jogadores como Michael Jordan fizeram história.</p>
   <a href="https://pt.wikipedia.org/wiki/Basquetebol" target="_blank">Saiba mais</a>
 
   <h3>Produtos</h3>
   <ul>
-    <li>Bola de basquete - R$ 99 - Tamanho: Masculino e feminino</li>
-    <li>Tênis de basquete - R$ 199 - Tamanhos: 38 ao 44</li>
-    <li>Camiseta - R$ 59 - Tamanhos: P, M, G</li>
+    <li>
+        <img src="../../imgs/boladebasqute.png" alt="Bola de basquete" width="200">
+        Bola de basquete - R$ 99 - Tamanho: Masculino e feminino</li>
+    <li>
+        <img src="../../imgs/tenisdebasute.png" alt="Tenis NIke" width="200">
+        Tênis de basquete - R$ 199 - Tamanhos: 38 ao 44</li>
+    <li>
+        <img src="../../imgs/camisadebasuete.png" alt="Camisa de basuquete" width="200">
+        Camiseta - R$ 59 - Tamanhos: P, M, G</li>
   </ul>
 </body>
 </html>
