--- a/esporte/Futebol/index.html
+++ b/esporte/Futebol/index.html
@@ -82,7 +82,7 @@
     <li><a href="../Futebol/index.html">Futebol</a></li>
     <li><a href="../Golfe/index.html">Golfe</a></li>
   </ul>
- <img src="../../imgs/ney.png" alt="image" width="300">
+ <img src="../../imgs/neyy.png" alt="image" width="300">
 
   <h2>Sobre o Futebol</h2>
   <p>Esporte mais popular do mundo. Grandes craques como Pelé e Messi marcaram a história.</p>
@@ -94,7 +94,7 @@
         <img src="../../imgs/boladefute.png" alt="Bola de futebol" width="200">
         Bola de futebol - R$ 89 - Tamanho: oficial</li>
     <li>
-        <img src="../../imgs/chuteiradefut.png" alt="Chuteira de futebol" width="200">
+        <img src="../../imgs/chufut.png" alt="Chuteira de futebol" width="200">
         Chuteira - R$ 159 - Tamanhos: 37 ao 43</li>
     <li>
         <img src="../../imgs/camisadefut.png" alt="Camisa de fcutebol" width="200">
